--- a/packages/libs/test-utils/pyproject.toml
+++ b/packages/libs/test-utils/pyproject.toml
@@ -8,13 +8,19 @@ packages = [{include = "test_utils"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-dagger-io = "^0.8.7"
+dagger-io = "^0.9.0"
 pytest = "^7.4.2"
 
+[project]
+name = "test_utils"
+version = "1.0.0" # ignore this, we use [tool.poetry]->version
+classifiers = [
+    "Framework :: Pytest",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.entry-points.pytest11]
 test_utils = "test_utils.fixtures"
