--- a/packages/sample-package/pyproject.toml
+++ b/packages/sample-package/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.11"
 psycopg2-binary = "^2.9.7"
 
 [tool.poetry.group.test.dependencies]
-test_utils = { path = "../lib/test-utils", develop = true }
+test_utils = { path = "../libs/test-utils", develop = true }
 anyio = "^4.0.0"
 pytest-asyncio = "^0.21.1"
 
